<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.choral-lang</groupId>
		<artifactId>distribution</artifactId>
		<relativePath>../pom.xml</relativePath>
		<version>0.1.1</version>
	</parent>
	<version>${choral.version}</version>
	<groupId>org.choral-lang</groupId>
	<artifactId>tests</artifactId>
	<name>Tests</name>
	<url>${choral.url}</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.choral-lang</groupId>
			<artifactId>base</artifactId>
			<version>${choral.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.choral-lang</groupId>
			<artifactId>runtime</artifactId>
			<version>${choral.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.choral-lang</groupId>
			<artifactId>choral</artifactId>
			<version>${choral.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.choral-lang</groupId>
			<artifactId>choral-unit</artifactId>
			<version>${choral.version}</version>
			<scope>runtime</scope>
		</dependency>
	</dependencies>
</project>